<resources>
    <string name="app_name">MEDS</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgetpassword">Forget password</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="age">Age</string>
    <string name="clinicaddress">Clinic Address</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">E-Mail</string>
    <string name="workson">Works At</string>
    <string name="experience">Experience</string>
    <string name="request">Request Consulatant</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="waistwidth">Waist Width</string>
    <string name="armwidth">Arm Width</string>
    <string name="thighwidth">Thigh Width</string>
    <string name="legwidth">Leg Width</string>
    <string name="anemiapercentage">Anemia Percentage</string>
    <string name="gender">Gender</string>
    <string name="bmi">BMI Result</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="bmiresult">BMI Result</string>
    <string name="sports">Sports</string>
    <string name="favouritefood">Favourite Food</string>
    <string name="fooddonteat">Food Dont eat</string>
    <string name="noofcupsofwater">Number of cups of water you drink daily</string>
    <string name="desiredcase"> Desired Case</string>
    <string name="next"> Next</string>
    <string name="welcome">Welcome To My app </string>
    <string name="confirm">Confirm Passwordt</string>
    <string name="title_activity_tab_">Tab_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello Fragment</string>
    <string name="title_activity_dr_profile">DrProfileActivity</string>

    <string name="request_id">request_id</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_nav">NAVActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dr_list">DrListActivity</string>
</resources>
